- fixed freeze when several tasks are executed from GUI - fixed DLengineProvider